feat: Instances and purchased pages for user

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -12,6 +12,7 @@
   "Roles": "角色",
   "Categories": "分类",
   "Search Categories": "搜索分类",
+  "My Instances": "我的实例",
   "Catalog": "目录",
   "Deployment": "部署",
   "Development": "开发",
