--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -144,8 +144,10 @@
   "Create Time": "创建时间",
   "App Info": "应用信息",
   "Base Info": "基本信息",
+  "App Detail": "应用详情",
   "Instructions": "使用说明",
   "Terms of service": "服务条款",
+  "User Evaluation": "用户评价",
   "Select file": "选择文件",
   "Preview": "预览",
   "Processed": "已处理",
@@ -159,5 +161,6 @@
   "Please input the reason for reject": "请您填写拒绝原因",
   "ISV_REVIEW_PASS": "应用服务商审核通过了该应用版本",
   "BUSINESS_ADMIN_REVIEW_PASS": "平台商务审核通过了该应用版本",
-  "DEVELOP_ADMIN_REVIEW_PASS": "平台技术审核审核通过了该应用版本"
+  "DEVELOP_ADMIN_REVIEW_PASS": "平台技术审核审核通过了该应用版本",
+  "APP_TOTAL_DESCRIPTION": "Openpitrix 官方商店，有 {{total}} 款应用。"
 }
