feat: Complete home page

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -465,5 +465,6 @@
   "Move apps category successfully": "添加应用到分类成功",
   "Delete category successfully": "删除分类成功",
   "days ago": " 天前",
-  "hours ago": " 小时前"
+  "hours ago": " 小时前",
+  "Service provider": "服务商"
 }
