feat: Complete missing translations for all pages

--- a/src/locales/en/base.json
+++ b/src/locales/en/base.json
@@ -76,5 +76,70 @@
   "TIPS_ADJUST_APP_CATE": "Please adjust category of {{appNames}} these {{appCount}} apps",
   "Upload_Package_Error": "Some files have errors, please check",
   "APP_TOTAL_DESCRIPTION": "Openpitrix oficial store，there are {{total}} apps",
-  "APP_SHELF_AND_SELL": "Your application shelf to official store and start selling ~"
+  "APP_SHELF_AND_SELL": "Your application shelf to official store and start selling ~",
+
+  "delivery_type_intro_vm": "Combined with OpenPitrix development specifications, applications are packaged into mirrors, and users deploy applications quickly based on mirrors.",
+  "delivery_type_intro_helm": "Lightweight, portable, self-contained software packaging technology enables applications to run in almost any place in the same way.",
+  "delivery_type_intro_saas": "Cloud centralized hosting software and related data, software can be used only through the Internet, not through installation.",
+  "delivery_type_intro_api": "Cloud centralized hosting software and related data, software can be used only through the Internet, not through installation.",
+  "delivery_type_intro_native": "Cloud centralized hosting software and related data, software can be used only through the Internet, not through installation.",
+  "delivery_type_intro_serveless": "Serverless Framework is a Server-Free application framework and ecosystem.",
+
+  "STEPPER_NAME_CREATE_APP_HEADER": "Create App {{activeStep}}/{{steps}}",
+  "STEPPER_TITLE_CREATE_APP_1": "Select the delivery type",
+  "STEPPER_TITLE_CREATE_APP_2": "Upload configuration file",
+  "STEPPER_TITLE_CREATE_APP_3": "Confirm app basic information",
+  "STEPPER_HEADER_CREATE_APP_2": "「Select the delivery type」",
+  "STEPPER_HEADER_CREATE_APP_3": "「Upload configuration file」",
+  "STEPPER_FOOTER_CREATE_APP_1": "An application can support multiple delivery modes and can be added at any time during the management process.",
+  "STEPPER_FOOTER_CREATE_APP_2": "See the complete app development specification",
+  "STEPPER_FOOTER_CREATE_APP_3": "After adjusting the above information, the corresponding content in the configuration file will be updated automatically.",
+  "LINK_STEPPER_FOOTER_CREATE_APP_2": "《Helm specification and application development》",
+  "STEPPER_NAME_CREATE_APP_VERSION_HEADER": "Add delivery method {{activeStep}}/{{steps}}",
+  "STEPPER_TITLE_CREATE_APP_VERSION_1": "Select the delivery type",
+  "STEPPER_TITLE_CREATE_APP_VERSION_2": "Upload configuration file",
+  "STEPPER_TITLE_CREATE_APP_VERSION_3": "Confirm app basic information",
+  "STEPPER_HEADER_CREATE_APP_VERSION_2": "「Select the delivery type」",
+  "STEPPER_FOOTER_CREATE_APP_VERSION_1": "An application can support multiple delivery modes and can be added at any time during the management process.",
+  "STEPPER_FOOTER_CREATE_APP_VERSION_2": "See the complete app development specification",
+  "STEPPER_FOOTER_CREATE_APP_VERSION_3": "After adjusting the above information, the corresponding content in the configuration file will be updated automatically.",
+  "LINK_STEPPER_FOOTER_CREATE_APP_VERSION_2": "《Helm specification and application development》.",
+  "STEPPER_NAME_ADD_APP_VERSION_HEADER": "Add new version",
+  "STEPPER_TITLE_ADD_APP_VERSION_1": "Upload configuration file",
+  "STEPPER_FOOTER_ADD_APP_VERSION_1": "See the complete app development specification",
+  "LINK_STEPPER_FOOTER_ADD_APP_VERSION_1": "《Helm specification and application development》.",
+  "icon_format_note": "The best format of icon is png, please upload it again.",
+  "screenshot_format_note": "The best format for screenshots is png/jpg, please upload it again.",
+  "Linkto_Intro_App": "View development specifications",
+
+  "CHOOSE_APP_CATEGORY_DESC": "Choose the appropriate application category, so that users can find your application faster.",
+  "MODIFY_VERSION_TIPS": "The content of each modification will follow the next version on the shelf and really take effect.",
+  "UNDER_REVIEW_TIPS":"The current version of the application is under review, and the following information is temporarily unalterable",
+
+  "STEPPER_NAME_APP_DEPLOY_HEADER": "Deploy",
+  "STEPPER_TITLE_APP_DEPLOY_1": "Deploy Instance",
+  "STEPPER_FOOTER_APP_DEPLOY_1": "The deployed instances will appear in the my instances list",
+  "HELM_APP_NAME_TIP": "Beginning with lowercase letters, up to 14 characters (supporting numbers/lowercase letters/hyphens)",
+
+  "DEPLOYED_APP_TOTAL": "Deployed {{total}} application instances",
+
+  "ISV_PASS_NOTE": "After approval, this app will be submitted to the platform for business and technical audit.",
+  "BUSINESS_PASS_NOTE": "After approval, this app will be submitted to the platform for technical review.",
+  "TECHNICAL_PASS_NOTE": "After approval, the app developer can publish this version to the app store.",
+  "REJECT_REASON_NOTE": "The above reasons will be sent to the applicant by email, please fill in carefully.",
+  "AUDIT_CONTENT_INTRODUCE": "The following information must be true and accurate, the key operational instructions need to describe the details, and the rights and obligations in the clauses need to be clearly described,",
+
+
+  "PACKAGE_FILE_DESC": "Package.json file, which describes the basic information of an application or version, including name version number, etc.",
+  "CONFIG_FILE_DESC": "Text format protocol",
+  "LICENSE_FILE_DESC": "Text format protocol",
+  "LOCALE_EN__FILE_DESC": "International Cultural English Translation of Application Configuration",
+  "LOCALE_ZH_FILE_DESC": "Application Configuration for International Chinese Translation of Cultures",
+  "CHART_FILE_DESC": "Yaml file, used to describe the basic information of Chart, including name version, etc.",
+  "README_FILE_DESC": "Introduction to Application, Instructions for Use",
+  "REQUIREMENTS_FILE_DESC": "Description files for storing other Charts that Chart currently relies on.",
+  "VALUES_FILE_DESC": "Chart's default profile",
+  "CHARTS_FILE_DESC": "Place other Charts that Chart currently depends on in this directory.",
+  "TEMPLATES_FILE_DESC": "Deploy file template directory, fill in the corresponding value in values. yaml, and generate the final kubernetes configuration file",
+  "NOTES_FILE_DESC": "Guide for use"
 }
