--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -119,7 +119,7 @@
   "Save": "保存",
   "Reset": "重置",
   "Upload time": "上传时间",
-  "Version details": "版本详情",
+  "Version detail": "版本详情",
   "Its application": "所属应用",
   "Latest record": "最新记录",
   "No history version": "没有历史版本",
@@ -165,5 +165,107 @@
   "ISV_REVIEW_PASS": "应用服务商审核通过了该应用版本",
   "BUSINESS_ADMIN_REVIEW_PASS": "平台商务审核通过了该应用版本",
   "DEVELOP_ADMIN_REVIEW_PASS": "平台技术审核审核通过了该应用版本",
-  "APP_TOTAL_DESCRIPTION": "Openpitrix 官方商店，有 {{total}} 款应用。"
+  "APP_TOTAL_DESCRIPTION": "Openpitrix 官方商店，有 {{total}} 款应用。",
+  "Screenshot": "截图",
+  "Version No": "版本号",
+  "Deploy now": "立即部署",
+  "Deploy after login": "登录后部署",
+
+  "Provider number": "服务商编号",
+  "Evaluation stars": "综合评价",
+  "Business introduction": "业务简介",
+  "Company website": "公司网站",
+  "Time of entry": "入驻时间",
+  "Discoveries": "发现",
+  "New Arrival": "最新上架",
+
+  "screenshots": "张截图",
+  "Delete all": "删除全部",
+  "The following content editing support ": "以下内容编辑支持 ",
+  " grammar": " 语法",
+  "View example": "查看范例",
+  "Start writing application terms of service": "开始编写应用的服务条款",
+  "Start writing instructions for the app": "开始编写应用的使用说明",
+  "Important identifier of the application": "应用的重要标识",
+  "One-sentence introduction": "一句话介绍",
+  "A general introduction to the application": "对应用的概括性介绍",
+  "Detail introduction": "详细介绍",
+  "Very helpful when users search for apps": "在用户搜索应用时会非常有帮助",
+  "Icon": "图标",
+  "Format png/svg background transparency is the best": "格式: png/svg背景透明最佳",
+  "Graphics size": "图形大小",
+  "Screenshot of the interface": "界面截图",
+  "File size no more than 2MB": "文件大小：不超过 2MB",
+  "Minimum 3, maximum 6": "最少3张，最多6张",
+  "CHOOSE_APP_CATEGORY_DESC": "选择适合的应用分类，便于用户更快发现你的应用",
+  "Service provider website": "服务商网站",
+  "Service provider's official website address": "服务商的官方网站地址",
+  "MODIFY_VERSION_TIPS": "每次修改的内容都将跟随下一次版本上架而真正生效。",
+  "UNDER_REVIEW_TIPS": "当前应用有版本正在审核中，以下信息暂时不可更改",
+  "View version record": "查看版本记录",
+
+
+  "User instances": "用户实例",
+  "Online version": "线上版本",
+  "On the shelf apps": "已上架应用",
+  "Deploy times this month": "本月部署次数",
+  "Total of deploy": "总部署次数",
+  "Apply No": "申请编号",
+  "Apply Type": "申请类型",
+  "App on the shelf": "应用上架",
+  "Auditors": "审核人员",
+  "DEPLOYED_APP_TOTAL": "已部署 {{total}} 个应用实例",
+  "Search or filter": "搜索或过滤",
+  "App No": "应用编号",
+
+  "Number": "编号",
+  "Submitter": "提交者",
+  "Submit time": "提交时间",
+  "Audit status": "审核状态",
+  "App service provider review": "应用服务商审核",
+  "Platform business review": "平台商务审核",
+  "Platform technology review": "平台技术审核",
+  "ISV_PASS_NOTE": "通过之后，此申请将提交到平台进行商务和技术审核",
+  "BUSINESS_PASS_NOTE": "通过之后，此申请将提交到平台进行技术审核。",
+  "TECHNICAL_PASS_NOTE": "通过之后，应用开发者可以将此版本发布到应用商店。",
+  "Why refuse this application?": "为什么拒绝此申请？",
+  "Please write down the reasons for rejection": "请写下拒绝原因",
+  "REJECT_REASON_NOTE": "以上原因将会以邮件的形式发送给申请者，请仔细填写。",
+  "Look again": "再看看",
+  "Not yet started": "尚未开始",
+  "Waiting for review": "等待审核",
+  "Auditor": "审核人员",
+  "Start time": "开始时间",
+  "Reject time": "拒绝时间",
+  "Pass time": "通过时间",
+  "Review progress": "审核进度",
+  "No review record data": "暂无审核记录数据",
+  "Audit type": "审核类型",
+  "Apply for shelf": "上架申请",
+  "Audit No": "审核编号",
+  "Current status": "当前状态",
+  "App review detail": "应用审核详情",
+  "Audit content": "审核内容",
+  "AUDIT_CONTENT_INTRODUCE": "以下信息必须真实准确，关键的操作说明需要描述详情，对于条款中的权利与义务需要描述清晰，",
+  "view detail standard": "查看详细标准",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": ""
 }
