--- a/src/locales/zh/app-version.json
+++ b/src/locales/zh/app-version.json
@@ -63,5 +63,18 @@
   "The file size cannot exceed 2M": "上传的文件不能超过2M",
   "Upload_Package_Error": "部分文件有报错，请检查后",
   "file_format_note": "文件格式支持 TAR, TAR.GZ, TAR.BZ 和 ZIP",
-  "APP_SHELF_AND_SELL": "你的应用已经上架到官方商店，开始售卖了~"
+  "APP_SHELF_AND_SELL": "你的应用已经上架到官方商店，开始售卖了~",
+
+  "PACKAGE_FILE_DESC": "Package.json文件，用于描述应用或版本的基本信息，包括名称版本号等",
+  "CONFIG_FILE_DESC": "应用的默认值配置文件",
+  "LICENSE_FILE_DESC": "文本格式的协议",
+  "LOCALE_EN__FILE_DESC": "应用配置的国际化英文翻译",
+  "LOCALE_ZH_FILE_DESC": "应用配置的国际化中文翻译",
+  "CHART_FILE_DESC": "Yaml文件，用于描述 Chart 的基本信息，包括名称版本等",
+  "README_FILE_DESC": "应用介绍、使用说明",
+  "REQUIREMENTS_FILE_DESC": "用于存放当前 Chart 依赖的其它 Chart 的说明文件",
+  "VALUES_FILE_DESC": "Chart 的默认值配置文件",
+  "CHARTS_FILE_DESC": "该目录中放置当前 Chart 依赖的其它 Chart",
+  "TEMPLATES_FILE_DESC": "部署文件模版目录，模版填入 values.yaml 中相应值，生成最终的 kubernetes 配置文件",
+  "NOTES_FILE_DESC": "使用指南"
 }
