--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -171,7 +171,7 @@
   "Deploy now": "立即部署",
   "Deploy after login": "登录后部署",
 
-  "Provider number": "服务商编号",
+  "Provider No": "服务商编号",
   "Evaluation stars": "综合评价",
   "Business introduction": "业务简介",
   "Company website": "公司网站",
@@ -247,25 +247,5 @@
   "App review detail": "应用审核详情",
   "Audit content": "审核内容",
   "AUDIT_CONTENT_INTRODUCE": "以下信息必须真实准确，关键的操作说明需要描述详情，对于条款中的权利与义务需要描述清晰，",
-  "view detail standard": "查看详细标准",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": ""
+  "view detail standard": "查看详细标准"
 }
