refactor: Change group button style

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -67,6 +67,7 @@
   "Deploy App": "部署应用",
   "Modify category": "编辑分类",
   "Modify": "修改",
+  "Rename": "重命名",
   "Delete": "删除",
   "Search App": "搜索应用",
   "App Name": "应用名称",
