refactor: Providers and applications table data show
* refactor: Modify Modal and Table style

* fix: App detail versoins tag error

--- a/src/locales/zh/provider.json
+++ b/src/locales/zh/provider.json
@@ -6,6 +6,8 @@
   "Company website": "公司官网",
   "Review time": "审核时间",
   "Apply for Residence": "入驻申请",
+  "Search providers": "搜索服务商",
+  "Start process": "开始处理",
 
   "Uncertified": "未认证",
   "Certified": "已认证",
