--- a/src/locales/zh/app-version.json
+++ b/src/locales/zh/app-version.json
@@ -76,5 +76,7 @@
   "VALUES_FILE_DESC": "Chart 的默认值配置文件",
   "CHARTS_FILE_DESC": "该目录中放置当前 Chart 依赖的其它 Chart",
   "TEMPLATES_FILE_DESC": "部署文件模版目录，模版填入 values.yaml 中相应值，生成最终的 kubernetes 配置文件",
-  "NOTES_FILE_DESC": "使用指南"
+  "NOTES_FILE_DESC": "使用指南",
+
+  "specification and application development": "规范和应用程序开发"
 }
