--- a/src/locales/zh/settting.json
+++ b/src/locales/zh/settting.json
@@ -16,6 +16,9 @@
   "SSL secure connection": "SSL 安全连接",
   "Sender address": "发件人地址",
   "Connect test": "测试连接",
+  "Connect loading": "测试中...",
+  "Connect success": "连接成功！",
+  "Connect failed": "连接失败 :(",
   "User authentication": "用户身份验证",
   "CLOUD-ENVIRONMENT-DESCRIBE": "平台的用户可以将以下开启的云环境对接到平台中来，做为实例或测试实例运行的环境。",
   "Platform setting": "平台设置"
