--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -436,6 +436,8 @@
   "Delivery type": "交付类型",
   "Count deploy": "部署总次数",
   "Publish time": "上架时间",
+  "Suspend time": "下架时间",
+  "Su time": "上架时间",
   "Search App Name or ID": "搜索应用名称或ID",
   "unknown": "未知",
   "All categories": "全部分类",
