--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -1,5 +1,8 @@
 {
+  "Search app name or ID": "搜索应用名称或 ID",
   "Add the child node": "添加下一级",
+  "All members": "全部成员",
+  "Team and member": "团队与成员",
   "Empty user": "用户名为空",
   "Empty role": "角色为空",
   "Empty email": "邮箱为空",
