--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -316,6 +316,8 @@
   "Back to developer": "开发中心",
   "App Center": "应用中心",
   "Develop Center": "开发中心",
+  "Provider Center": "服务商中心",
+  "Manage Console": "管理控制台",
   "Document": "文档",
   "Already create new version": "已创建新版本",
   "None": "无",
