fix: Pages dashboard link change to  toRoute

--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -200,7 +200,7 @@
 
 
   "User instances": "用户实例",
-  "Online version": "线上版本",
+  "Online version": "已上架、下架版本",
   "On the shelf apps": "已上架应用",
   "Deploy times this month": "本月部署次数",
   "Total of deploy": "总部署次数",
