--- a/src/locales/zh/provider.json
+++ b/src/locales/zh/provider.json
@@ -39,6 +39,7 @@
   "SUBMIT_SUCCESS_HEADER": "你的认证信息我们已经收到，会尽快完成审核。",
   "SUBMIT_SUCCESS_TIP": "请留意审核结果通知。",
   "View app service provider detail": "查看应用商详情",
+  "Back to App Store": "返回应用心",
   "SUBMIT_WRITE_TIP": "以下信息对于平台审核服务商资质非常重要，请准确填写",
   "Contact information": "联系人信息",
   "CONTACT_INFORMATION_NOTE": "在审核过程中，以及入驻之后的重要事件都会第一时间与联系人沟通。",
